Atualizar informações de um usuário e/ou login.
