# src/main/java/com/doeaqui/sboot_atom_blood_donation/controller/UsuarioApiImpl.java
@@ -4,7 +4,9 @@ import com.doeaqui.sboot_atom_blood_donation.api.UsuarioApiDelegate;
 import com.doeaqui.sboot_atom_blood_donation.domain.Usuario;
 import com.doeaqui.sboot_atom_blood_donation.mapper.UsuarioMapper;
 import com.doeaqui.sboot_atom_blood_donation.model.NewUsuarioRequest;
+import com.doeaqui.sboot_atom_blood_donation.model.UpdateUsuarioRequest;
 import com.doeaqui.sboot_atom_blood_donation.model.UsuarioResponse;
+import com.doeaqui.sboot_atom_blood_donation.service.LoginService;
 import com.doeaqui.sboot_atom_blood_donation.service.UsuarioService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -17,12 +19,13 @@ import java.net.URI;
 @RequiredArgsConstructor
 public class UsuarioApiImpl implements UsuarioApiDelegate {
 
-    private final UsuarioService service;
+    private final UsuarioService usuarioService;
     private final UsuarioMapper mapper;
+    private final LoginService loginService;
 
     @Override
     public ResponseEntity<UsuarioResponse> postNewUser(NewUsuarioRequest usuarioRequest) {
-        Usuario usuario = service.postNewUser(usuarioRequest);
+        Usuario usuario = usuarioService.postNewUser(usuarioRequest);
         UsuarioResponse response = mapper.toUsuarioResponse(usuario);
         URI uri = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}").buildAndExpand(response.getId()).toUri();
         return ResponseEntity.created(uri).body(response);
@@ -30,7 +33,13 @@ public class UsuarioApiImpl implements UsuarioApiDelegate {
 
     @Override
     public ResponseEntity<UsuarioResponse> getUserInfoById(Integer idUsuario) {
-        UsuarioResponse response = service.getUserInfoById(idUsuario);
+        UsuarioResponse response = usuarioService.getUserInfoById(idUsuario);
+        return ResponseEntity.ok(response);
+    }
+
+    @Override
+    public ResponseEntity<UsuarioResponse> patchUserInfo(Integer idUsuario, UpdateUsuarioRequest updateUsuarioRequest) {
+        UsuarioResponse response = usuarioService.patchUserInfo(idUsuario, updateUsuarioRequest);
         return ResponseEntity.ok(response);
     }
 }
